# PreciseArithmetics

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
include/PreciseArithmetics/: complex.h  field.h  integer.h  math.h  rational.h  real.h
src/: fft.cpp  integer.cpp  integer_base.cpp  number_base.cpp  rational.cpp  real_base.cpp
src/include/: basenumber.h  complex_base.h  fft.h  integer_base.h  karatsuba.h  newton_raphson.h  number_base.h  rational_base.h  real_base.h
tests/: tester.cpp
